--- a/week4/package.json
+++ b/week4/package.json
@@ -6,6 +6,7 @@
   "author": "Nahee-Park",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
@@ -25,6 +26,7 @@
     "@typescript-eslint/parser": "^5.11.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
