--- a/week4/package.json
+++ b/week4/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-router-dom": "^6.2.1",
     "styled-components": "^5.3.5"
   },
@@ -38,12 +38,14 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.5.1",
     "source-map-loader": "^3.0.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
