--- a/week4/package.json
+++ b/week4/package.json
@@ -43,6 +43,9 @@
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.5.1",
     "source-map-loader": "^3.0.1",
+    "stylelint": "^14.8.2",
+    "stylelint-config-concentric-order": "^5.0.0",
+    "stylelint-webpack-plugin": "^3.2.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "url-loader": "^4.1.1",
